--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <style>
     @font-face {
       font-family: 'TharuDigitalMahee';
-      src: url('tharu_digital_mahee.ttf') format('truetype');
+      src: url('./fonts/tharu_digital_mahee.ttf') format('truetype');
       font-display: swap;
     }
 
