--- a/index.html
+++ b/index.html
@@ -115,32 +115,33 @@
 const mapping = {
   "කා":"ld", "කැ":"le", "කෑ":"lE", "කි":"ls", "කී":"lS", "කු":"l=", "කූ":"l+", "කෙ":"fl", "කේ":"fla", "කො":"fld", "කෝ":"flda", "ක":"l",
   "ගා":".d", "ගැ":".e", "ගෑ":".E", "ගි":".s", "ගී":".S", "ගු":".=", "ගූ":".+", "ගෙ":"f.", "ගේ":"f.a", "ගො":"f.d", "ගෝ":"f.da", "ග":".",
-  "චා":"pd", "චැ":"pe", "චෑ":"pE", "චි":"ps", "චී":"pS", "චු":"pq", "චූ":"pQ", "චෙ":"fp", "චේ":"fpa", "චො":"fpd", "චෝ":"fpda", "ච":"p",
-  "ජා":"Pd", "ජැ":"Pe", "ජෑ":"PE", "ජි":"Ps", "ජී":"PS", "ජු":"Pq", "ජූ":"PQ", "ජෙ":"fP", "ජේ":"fPa", "ජො":"fPd", "ජෝ":"fPda", "ජ":"P",
-  "ටා":"gd", "ටැ":"ge", "ටෑ":"gE", "ටි":"gs", "ටී":"gS", "ටු":"gq", "ටූ":"gQ", "ටෙ":"fg", "ටේ":"fga", "ටො":"fgd", "ටෝ":"fgda", "ට":"g",
-  "ඩා":"vd", "ඩැ":"ve", "ඩෑ":"vE", "ඩි":"vs", "ඩී":"vS", "ඩු":"vq", "ඩූ":"vQ", "ඩෙ":"fv", "ඩේ":"fva", "ඩො":"fvd", "ඩෝ":"fvda", "ඩ":"v",
+  "චා":"pd", "චැ":"pe", "චෑ":"pE", "චි":"Ñ", "චී":"Ö", "චු":"pq", "චූ":"pQ", "චෙ":"fp", "චේ":"fpa", "චො":"fpd", "චෝ":"fpda", "ච":"p",
+  "ජා":"Pd", "ජැ":"Pe", "ජෑ":"PE", "ජි":"ð", "ජී":"PS", "ජු":"Pq", "ජූ":"PQ", "ජෙ":"fP", "ජේ":"fPa", "ජො":"fPd", "ජෝ":"fPda", "ජ":"P",
+  "ටා":"gd", "ටැ":"ge", "ටෑ":"gE", "ටි":"á", "ටී":"à", "ටු":"gq", "ටූ":"gQ", "ටෙ":"fg", "ටේ":"fga", "ටො":"fgd", "ටෝ":"fgda", "ට":"g",
+  "ඩා":"vd", "ඩැ":"ve", "ඩෑ":"vE", "ඩි":"vs", "ඩී":"ã", "ඩු":"vq", "ඩූ":"vQ", "ඩෙ":"fv", "ඩේ":"fva", "ඩො":"fvd", "ඩෝ":"fvda", "ඩ":"v",
   "තා":";d", "තැ":";e", "තෑ":";E", "ති":";s", "තී":";S", "තු":";=", "තූ":";+","තෙ":"f;", "තේ":"f;a", "තො":"f;d", "තෝ":"f;da", "ත":";", "ත්":";a",
-  "දා":"od", "දැ":"oe", "දෑ":"oE", "දි":"os", "දී":"oS", "දු":"oq", "දූ":"oQ", "දෙ":"fo", "දේ":"foa", "දො":"fod", "දෝ":"foda", "ද":"o", "ද්":"oa",
+  "දා":"Þ", "දැ":"oe", "දෑ":"oE", "දි":"os", "දී":"oS", "දු":"ÿ", "දූ":"oQ", "දෙ":"fo", "දේ":"foa", "දො":"fod", "දෝ":"foda", "ද":"o", "ද්":"oa",
   "නා":"kd", "නැ":"ke", "නෑ":"kE", "නි":"ks", "නී":"kS", "නු":"kq", "නූ":"kQ", "නෙ":"fk", "නේ":"fka", "නො":"fkd", "නෝ":"fkda", "න":"k", "න්":"ka",
   "පා":"md", "පැ":"me", "පෑ":"mE", "පි":"ms", "පී":"mS", "පු":"mq", "පූ":"mQ", "පෙ":"fm", "පේ":"fma", "පො":"fmd", "පෝ":"fmda", "ප":"m",
-  "බා":"nd", "බැ":"ne", "බෑ":"nE", "බි":"ns", "බී":"nS", "බු":"nq", "බූ":"nQ", "බෙ":"fn", "බේ":"fna", "බො":"fnd", "බෝ":"fnda", "බ":"n",
-  "මා":"ud", "මැ":"ue", "මෑ":"uE", "මි":"us", "මී":"uS", "මු":"uq", "මූ":"uQ", "මෙ":"fu", "මේ":"fua", "මො":"fud", "මෝ":"fuda", "ම":"u",
+  "බා":"nd", "බැ":"ne", "බෑ":"nE", "බි":"ì", "බී":"î", "බු":"nq", "බූ":"nQ", "බෙ":"fn", "බේ":"fí", "බො":"fnd", "බෝ":"fnda", "බ":"n",
+  "මා":"ud", "මැ":"ue", "මෑ":"uE", "මි":"ñ", "මී":"ó", "මු":"uq", "මූ":"uQ", "මෙ":"fu", "මේ":"fua", "මො":"fud", "මෝ":"fuda", "ම":"u",
   "යා":"hd", "යැ":"he", "යෑ":"hE", "යි":"hs", "යී":"hS", "යු":"hq", "යූ":"hQ", "යෙ":"fh", "යේ":"fha", "යො":"fhd", "යෝ":"fhda", "ය":"h",
-  "රා":"rd", "රැ":"/", "රෑ":"?", "රි":"rs", "රී":"rS", "රු":"re", "රූ":"r+", "රෙ":"fr", "රේ":"fra", "රො":"frd", "රෝ":"frda", "ර":"r",
+  "රා":"rd", "රැ":"/", "රෑ":"?", "රි":"ß", "රී":"Í", "රු":"re", "රූ":"r+", "රෙ":"fr", "රේ":"f¾", "රො":"frd", "රෝ":"frda", "ර":"r",
   "ලා":",d", "ලැ":",e", "ලෑ":",E", "ලි":",s", "ලී":",S", "ලු":",q", "ලූ":",Q", "ලෙ":"f,", "ලේ":"f,a", "ලො":"f,d", "ලෝ":"f,da", "ල":",",
-  "වා":"jd", "වැ":"je", "වෑ":"jE", "වි":"js", "වී":"jS", "වු":"jq", "වූ":"jQ", "වෙ":"fj", "වේ":"fja", "වො":"fjd", "වෝ":"fjda", "ව":"j",
+  "වා":"jd", "වැ":"je", "වෑ":"jE", "වි":"ú", "වී":"ù", "වු":"jq", "වූ":"jQ", "වෙ":"fj", "වේ":"fja", "වො":"fjd", "වෝ":"fjda", "ව":"j",
   "සා":"id", "සැ":"ie", "සෑ":"iE", "සි":"is", "සී":"iS", "සු":"iq", "සූ":"iQ", "සෙ":"fi", "සේ":"fia", "සො":"fid", "සෝ":"fida", "ස":"i",
   "හා":"yd", "හැ":"ye", "හෑ":"yE", "හි":"ys", "හී":"yS", "හු":"yq", "හූ":"yQ", "හෙ":"fy", "හේ":"fya", "හො":"fyd", "හෝ":"fyda", "හ":"y",
   "අ":"w", "ආ":"wd", "ඇ":"we", "ඈ":"wE", "ඉ":"b", "ඊ":"B", "උ":"W", "ඌ":"W!",  "එ":"t", "ඒ":"ta", "ඔ":"T", "ඕ":"´", "ඖ":"T!",
-  "ඤ":"\`[", "ඥ":"~{", 
+  "ඤ":"\`[", "ඥ":"~{","ඥා":"×","ඤා":"Ø",
 
   // Hard letters
-  "භ":"N", "ෆ":"*","ශ":"Y","ධ":"O","ඳ":"|","ණ":"K","ළ":"<","ථ":":","ෂ":"I",
+  "භ":"N", "ෆ":"*","ශ":"Y","ධ":"O","ඳෙ":"f|","ඳ":"|","ණ":"K","ළ":"<","ථ":":","ෂ":"I", "ළු":"¿","ඛ්":"Ä","ඛි":"Å","ඛී":"Ç","ක්ෂ":"Ë", "ඟ":"Õ","ට්":"Ü",
+  "ඩ්":"â","ඬ":"~","ඹ":"U","ඳු":"÷","ඹී":"ö","වි":"õ","ඹි":"ô","ම්":"ï","බ්":"í","ධී":"ë",
   
   // Additional special characters and vowel modifiers
   "්":"a", "ං":"x", "ඃ":"#",
   "ෙ":"f", "ේ":"fa", "ෛ":"ff", "ො":"fd", "ෝ":"fda", "ෞ":"f!",
-  "ා":"d", "ැ":"e", "ෑ":"E", "ි":"s", "ී":"S", "ු":"=", "ූ":"+"
+  "ා":"d", "ැ":"e", "ෑ":"E", "ි":"s", "ී":"S", "ු":"=", "ූ":"+",".":"'"
 };
 
 // Check if font is loaded
